Add images, plasma and spring lambs

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
+            <br><a href="./entries/plasma240623.html">plasma240623</a>
             <br><a href="./entries/pocked170123.html">pocked170123</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
@@ -85,6 +86,7 @@
     </div>
 
     <a href="./entries/collaberrations/guldies.html">guldies</a>
+    <br><a href="./entries/collaberrations/springlambs.html">spring lambs</a>
 
     
     <div class="arcadetitle">
@@ -202,13 +204,19 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/primed.jpg" alt="a model mule in a glass case" id="mulepic"><p>mule gear</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspot</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspeck</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/epithelium.jpg" alt="the alps of Canterbury" id="epitheliumpic"><p>epithelium</p></div>
   
         <div class="imgcontainerportrait"><img src="./resources/images/wallmoth.jpg" alt="Milford fjord wall, patterned like a moth" id="wallmothpic"><p>wallmoth</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/lowyawning.jpg" alt="beach cave at Sumner" id="lowyawningpic"><p>low yawning</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/spookhouse.jpg" alt="house in the suburban night" id="spookhousepic"><p>spookhouse</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/parchedwalker.jpg" alt="a parched field on a summer walk in Essex" id="parchedwalkerpic"><p>parched walker</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/hotmoon.jpg" alt="Tongariro alpine crossing" id="hotmoonpic"><p>touch of a heated moon</p></div>
     </div>
 
 </body>
