add two entries and an image

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
+            <br><a href="./entries/taylorsmistake020723.html">taylorsmistake020723</a>
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
@@ -76,6 +77,7 @@
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
+            <br><a href="./entries/opticverve/swallowingsnow070723.html">swallowingsnow070723</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
             <br><a href="./entries/opticverve/walkingblue080323.html">walkingblue080323</a>
         </p>
@@ -217,6 +219,8 @@
         <div class="imgcontainershortlandscape"><img src="./resources/images/parchedwalker.jpg" alt="a parched field on a summer walk in Essex" id="parchedwalkerpic"><p>parched walker</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/hotmoon.jpg" alt="Tongariro alpine crossing" id="hotmoonpic"><p>touch of a heated moon</p></div>
+
+        <div class="imgcontainersmallsquare"><img src="./resources/images/witchspire.jpg" alt="crooked church spire looking like a witch's hat" id="witchspirepic"><p>witchspire</p></div>
     </div>
 
 </body>
