--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
+            <br><a href="./entries/bubblecars200723.html">bubblecars200723</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
@@ -221,6 +223,10 @@
         <div class="imgcontainerhigher"><img src="./resources/images/hotmoon.jpg" alt="Tongariro alpine crossing" id="hotmoonpic"><p>touch of a heated moon</p></div>
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/witchspire.jpg" alt="crooked church spire looking like a witch's hat" id="witchspirepic"><p>witchspire</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/idlewild.jpg" alt="wildflower in the rockies" id="idlewildpic"><p>idlewild</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/bumblecram.jpg" alt="bumble bees on a flower crammed with purple" id="bumblecrampic"><p>bumblecram</p></div>
     </div>
 
 </body>
