Edit quite a lot of oo+ and add an entry to optic verve

--- a/entries/hawkingdrive220723.html
+++ b/entries/hawkingdrive220723.html
@@ -22,9 +22,9 @@
 
 
     <div class="mainentry">
-        <p>I was telling myself that altitude, at this height, is a myth, although my lungs and body were telling me different. When you're taken higher, it's as if gravity goes up with you. I was sweating heavily, felt stuck to the floor, but was enjoying the clear space of morning and its sun.</p>
+        <p>I was telling myself that altitude, at this height, is a myth, although my lungs and body were telling me different. When you're taken higher, it's as if gravity increases too. I was sweating heavily, felt stuck to the floor, but was enjoying the clear space of morning and its sun.</p>
 
-        <p>Listening to two albums by Blackhaine, back to back, I thought about his use of driving metaphors. Cars, 'black lights on the M6', swerving lanes, windshields and wreckage. There's driving and there's being driven, driving as a symbol of control and driving as a symbol of losing control, driving as a route to possibility and driving as an endless loop on a ringroad in the distant North. I only started driving last year and it's changed my life in ways I couldn't have imagined before.</p>
+        <p>Listening to two albums by Blackhaine, back to back, I thought about his use of driving metaphors. Cars, 'black lights on the M6', swerving lanes, windshields and wreckage. There's driving and there's being driven; driving as a symbol of control and driving as a symbol of losing control; driving as a route to possibility and driving as an endless loop on a ringroad in the distant North. I only started driving last year and it's changed my life in ways I couldn't have imagined before.</p>
 
         <p>As I rounded one of the last corners on my run, a bird of prey rose from the bushes to my right, carrying another bird in its talons. The trapped animal had long, stiff tail feathers that looked, as they trailed behind, like they belonged to the hawk, so that the combined spectacle was of a mythical, rare, smooth-gliding creature I'd never seen before, surprising in its lethal intent. It was flanked by a series of other birds, smaller, possibly kin to the one that had been caught, and they jostled and spun behind the departing hawk like panicked escorts.</p>
 
