--- a/entries/projects/magicandmachine/10roomsfullofcurtains.html
+++ b/entries/projects/magicandmachine/10roomsfullofcurtains.html
@@ -12,7 +12,12 @@
 
 <body>
     <div class="maintextsection">
-        <p>rooms full of thick curtains, intricate weaves, heavy and sweaty, pull one aside to reveal more hangings, you find yourself longing for something as predictable and as containing as a solid wall, no more decorations or dense blocks of design, a clotting of fabric, folds of velvet and dust, the swallowing of sound</p>
+        <p>rooms full of thick curtains, intricate weaves, heavy and sweaty
+            <br><br>
+            pull one aside to reveal more hangings
+            <br><br>you find yourself longing for something as predictable and as containing as a solid wall
+            <br><br>no more decorations or dense blocks of design
+            <br><br>a clotting of fabric, folds of velvet and dust, the swallowing of sound</p>
     </div>
     <div class="leave">
         <p>
