--- a/entries/projects/magicandmachine/15youneverlistened.html
+++ b/entries/projects/magicandmachine/15youneverlistened.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="maintextsection">
-        <p>You never listened when I was hitting the space bar, repeatedly, with my elbow, like a plump rat. I was staring into the command prompt hoping the next tap would bring a response, or blow something up, reveal something beyond the inscrutable evil, the buried activities of code. </p>
+        <p>You never listened when I was hitting the space bar, repeatedly, with my elbow, like one of those plump rats in an experiment you hear about but never know the details of.</p> 
+        <p>I was staring into the command prompt hoping the next tap would bring a response, or blow something up; reveal something beyond the inscrutable, buried activities of code that I'm too tired to follow or read. </p>
     </div>
     <div class="leave">
         <p>
