--- a/entries/projects/magicandmachine/18sometimeswecantrejoin.html
+++ b/entries/projects/magicandmachine/18sometimeswecantrejoin.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="maintextsection">
-        <p>sometimes we can't rejoin the world because its creator is fatigued or struggling with their mental health or stoned.</p> 
+        <p>sometimes we can't rejoin our shared, fictional world because its creator is fatigued, or struggling with their mental health, or stoned.</p> 
 
-        <p>fictional travel takes mental energy - it can prove exhausting. </p>
+        <p>fictional travel takes significant energy - it can prove exhausting. </p>
     </div>
     <div class="leave">
         <p>
