--- a/entries/projects/magicandmachine/21dementia.html
+++ b/entries/projects/magicandmachine/21dementia.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>Dementia can cause you to forget all manner of things, but what will the disease look like in the digital age? What will coding be like when the brain starts to head earthward? You miss a single character and the whole stack can fold.</p>
+        <p>Dementia can cause you to forget all manner of things, but what will the disease look like in a digitally augmented age?</p>
     </div>
     <div class="leave">
         <p>
