--- a/entries/projects/magicandmachine/23borntoolate.html
+++ b/entries/projects/magicandmachine/23borntoolate.html
@@ -12,11 +12,9 @@
 
 <body>
     <div class="maintextsection">
-        <p>growing sense of having been born too late
+        <p>predictable sense of having been born too late -
             <br><br>
-            visions of embracing an earlier era
-            <br><br>
-            before CGI stole our eyes</p>
+            shared, presumably, by any age that believes it can access the past.</p>
     </div>
     <div class="leave">
         <p>
