--- a/entries/projects/magicandmachine/25whenthefictionalworld.html
+++ b/entries/projects/magicandmachine/25whenthefictionalworld.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>when the fictional world becomes too dark we withdraw into another dimension, further beneath, even further removed, another twist downward into the purple, heady cork </p>
+        <p>when the fictional world becomes too dark we withdraw into another dimension, further below ground, even further removed, another twist downward into the purple, heady cork </p>
     </div>
     <div class="leave">
         <p>
