--- a/entries/projects/magicandmachine/26muchlikegod.html
+++ b/entries/projects/magicandmachine/26muchlikegod.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>much like something we might call God, we roll dice to determine how well our characters are going to be able to face life</p>
+        <p>much like something we might call 'god', we roll dice to determine how well our characters are going to be able to face life</p>
     </div>
     <div class="leave">
         <p>
