--- a/entries/projects/magicandmachine/29diagramofabug.html
+++ b/entries/projects/magicandmachine/29diagramofabug.html
@@ -14,10 +14,11 @@
     <div class="maintextsection">
         <p>diagram of a bug on a wall
             <br>caused by said bug being crushed
-            <br>against said wall - a sense of the exo-skeleton remains
+            <br>against said wall - 
+            <br>a sense of the exo-skeleton remains
             <br>
             <br>out the corner of the eye 
-            <br>it looks like it might still be flying
+            <br>it looks like it might still be flying -
             <br>a retention of potential 
             </p>
     </div>
