--- a/entries/projects/magicandmachine/31loveasaform.html
+++ b/entries/projects/magicandmachine/31loveasaform.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>Love as a form of possession, a spiritual experience, a technological insertion, a digital takeover, invisible occupying force with tiny wires, silent feet and beeping only the smallest mice can hear. </p>
+        <p>Love as a form of possession, a spiritual experience, a technological insertion, a digital takeover, a tiny occupying force with invisible wires, silent feet and beeping only the smallest organisms can hear. </p>
     </div>
     <div class="leave">
         <p>
