--- a/entries/projects/magicandmachine/34industrialchurch.html
+++ b/entries/projects/magicandmachine/34industrialchurch.html
@@ -14,10 +14,10 @@
     <div class="maintextsection">
         <p>descent into the catawomb of an industrial church<br><br>
             graves in the garden indicating you're on the right track<br><br> 
-            sense that the drop into the gloop and cells of the machine<br><br>
+            drop into the gloop and cells of the machine<br><br>
             (there's that frightening pig again, you can't get away from it)<br><br>
             aided by steam and elevators<br><br>
-            is, of course, a dive into the soul</p>
+            this is, of course, a dive into the soul</p>
     </div>
     <div class="leave">
         <p>
