--- a/entries/projects/magicandmachine/44onlinevandal.html
+++ b/entries/projects/magicandmachine/44onlinevandal.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>an online vandal, getting carried away inverting the colour schemes for digital marketing campaigns, shaving the edges off company logos, then checking social media to see if anyone found it amusing</p>
+        <p>an online vandal, getting carried away inverting the colour schemes for digital marketing campaigns, shaving the edges off company logos, then checking social media to see if anyone finds it amusing</p>
     </div>
     <div class="leave">
         <p>
