--- a/entries/projects/magicandmachine/50utopia.html
+++ b/entries/projects/magicandmachine/50utopia.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>utopia with chipped edge looking good for auction</p>
+        <p>utopia with chipped edge looking good at auction</p>
     </div>
     <div class="leave">
         <p>
