--- a/entries/projects/magicandmachine/52livingasacloud.html
+++ b/entries/projects/magicandmachine/52livingasacloud.html
@@ -14,7 +14,7 @@
     <div class="maintextsection">
         <p>there are laws against living as a cloud, just as there are laws against living inside clouds<br><br>
             there are laws against infecting the cloud, messing with other people's clouds<br><br>
-            there are no laws against gazing out the window of a plane and feeling like the clouds construct a separate plane of reality, one that you could stand on or fall through </p>
+            there are no laws against gazing out the window of a plane and feeling as if the clouds construct a separate plane of reality, one that you could stand on or fall through </p>
     </div>
     <div class="leave">
         <p>
