--- a/entries/projects/magicandmachine/56testinggames.html
+++ b/entries/projects/magicandmachine/56testinggames.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>Some people like to test the edges of games, to see what happens at the end of the map, or when you jump at a certain time in a certain place at the same time as something else occurring. </p>
+        <p>Some people like to test the edges of games, to see what happens at the end of the map, or to see what happens when you jump at a certain time in a certain place at the same time as something else, hoping it will make something else happen. </p>
     </div>
     <div class="leave">
         <p>
