--- a/entries/projects/magicandmachine/5dungeonkeeper.html
+++ b/entries/projects/magicandmachine/5dungeonkeeper.html
@@ -14,7 +14,7 @@
     <div class="maintextsection">
         <p>As a child I could never concentrate on playing football because I would be thinking about playing Dungeon Keeper - having my imps dig out networks in the dark, gems in the bedrock, luring fat devils with chickens that hatch from the earth.</p>
         <p>The empty space you dug out had to be decked with various rooms. This would attract various creatures to your depths. They would come when there was enough food, enough room for them to grow. Sometimes you would dig through rock into pre-existing caverns, or underground rivers, stretching out into unmapped fog.</p>
-        <p>Sometimes a rival dungeon would exist, a rival dungeon keeper, and when you spilled into each other's underworld, war would begin.</p>
+        <p>Sometimes a rival dungeon would exist, a rival dungeon keeper, and when you spilled into each other's underworld, war would ensue.</p>
     </div>
     <div class="leave">
         <p>
