--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -73,6 +73,8 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/60conceptionofgod.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/61nets.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/62animals.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/63parents.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/64scarfmemory.html">+</a>
         </p>
     </div>
     <div class="leave">
