--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <br><a href="./entries/opticverve/beached161222.html">beached161222</a>
             <br><a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
             <br><a href="./entries/opticverve/coves161022.html">coves161022</a>
+            <br><a href="./entries/opticverve/dequantization030823.html">dequantization030823</a>
             <br><a href="./entries/opticverve/fallwater120523.html">fallwater120523</a>
             <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
