--- a/entries/projects/magicandmachine/22somethingvast.html
+++ b/entries/projects/magicandmachine/22somethingvast.html
@@ -14,7 +14,7 @@
     <div class="maintextsection">
         <p>something vast blocking out most of the sky 
             <br><br>
-            with ninety-six long, leathery legs
+            with long, leathery legs, numerous enough to make the skin crawl;
             <br><br>
             at the end of each one a toothfoot 
             <br><br>
