--- a/entries/projects/magicandmachine/47wiredchildren.html
+++ b/entries/projects/magicandmachine/47wiredchildren.html
@@ -12,11 +12,8 @@
 
 <body>
     <div class="maintextsection">
-        <p>What will skeletons of the digital age look like? Wired bodies, huddling in corners like children, surrounded by buzz, clicks and chattering lights? Sceptres of aluminium puncturing the sky over flatlands in the near dark, bulb on top to prevent aircraft from impaling themselves?</p>
+        <p>sceptres of aluminium puncturing the sky over wetlands in the near dark, bulbs on top to prevent aircraft from impaling themselves</p>
 
-        <p>Rows and rows of clever clever silicon. Cavernous intelligence. Underground or under the sea or anywhere.</p>
-            
-        <p>Aliens will come down to find earth stripped of all but animal life, wandering amongst the metal trees - animals that have survived because they were never made part of the network. </p>
     </div>
     <div class="leave">
         <p>
