--- a/entries/projects/magicandmachine/63parents.html
+++ b/entries/projects/magicandmachine/63parents.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++28
+    <title>o++63
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>'destroyer of underworlds' - what would that entail? would we feel shockwaves all the way up here?</p>
+        <p>So many games built by parents struggling to connect with their children, trying to help their children, drawn back to their own childhoods by their children, unable to spend enough time with their children, too many hours spent commuting so that they might pay for their children, so that their children might grow up to find themselves disconnected from their children, trying to find ways to turn everything back, away from the new and the riven.</p>
     </div>
     <div class="leave">
         <p>
