--- a/entries/projects/magicandmachine/64scarfmemory.html
+++ b/entries/projects/magicandmachine/64scarfmemory.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++28
+    <title>o++64
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>'destroyer of underworlds' - what would that entail? would we feel shockwaves all the way up here?</p>
+        <p>'maybe it was his inability to find a good photo of the scarf that inspired michael to write this game: it was the only way to show the scarf from all angles...</p>
+        <p>... this is what real human beings would do with games, if they had a way of making games that was actually accessible to them. it was a thought that opened by eyes, and they've never stopped opening, wider each day.'</p>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbsp- Anna Anthropy, playing 'Scarfmemory' by Michael Brough</p>
     </div>
     <div class="leave">
         <p>
