--- a/entries/projects/magicandmachine/48nanopods.html
+++ b/entries/projects/magicandmachine/48nanopods.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>Two nanopods find themselves questioning whether they themselves are not being fooled. After the next Fall, they consider the possibility that humans are the ones who have achieved invisibility, or immortality. The ultimate vanishing act that marks the maker from the made. They start to worship us, now that we're no longer there. They tell stories about what we might have looked like. They tell cautionary tales about ending up in a world where we exist.</p>
+        <p>Two nanopods find themselves questioning whether they themselves are not being fooled. After the next Fall, they consider the possibility that humans are the ones who have achieved invisibility, or immortality - the ultimate vanishing act that distinguishes the maker from the made. They start to worship us, now that we're no longer there. They tell stories about what we might have looked like. They tell cautionary tales about ending up in a world where we exist.</p>
     </div>
     <div class="leave">
         <p>
