--- a/entries/projects/magicandmachine/53inanotherworld.html
+++ b/entries/projects/magicandmachine/53inanotherworld.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>in another world, a field of needles, not the intravenous type, more like spines, or pine needles if they were less organic, and mud underfoot as the needles sway upright then sway down to the earth, a knife rack swaying in the field breeze, a stretched prairie of sharp edge, not a single strand of hay in sight</p>
+        <p>in another world, a field of needles, not the intravenous type, more like spines, or pine needles if they were less organic, and mud underfoot as the needles sway upright then sway down to the earth, a knife rack swaying in the field breeze, a stretched prairie of sharp edges, not a single strand of hay in sight</p>
     </div>
     <div class="leave">
         <p>
