--- a/entries/projects/magicandmachine/6morehumanscene.html
+++ b/entries/projects/magicandmachine/6morehumanscene.html
@@ -14,7 +14,7 @@
     <div class="maintextsection">
         <p>a more human scene<br><br>
             where one human gets another human<br><br>
-            a beer from the fridge<br><br>
+            a beer from the fridge -<br><br>
             they sit and eat together and watch nothing in particular</p>
     </div>
     <div class="leave">
