--- a/entries/projects/magicandmachine/54mainframe.html
+++ b/entries/projects/magicandmachine/54mainframe.html
@@ -13,7 +13,7 @@
 <body>
     <div class="maintextsection">
         <p>The next step, of course, is our brains being hooked straight into it. Old people will resist just as old people resist everything. I, too, will resist, I think.</p>
-        <p>I can't wait for there to be technology for me to shun when I'm dying. My grandchildren will look at me and wonder how I survive unplugged, whilst they plug me in to the life support. Is that how the nanomites will get me? Via the hospital bed? The nanthropocene arriving just as the bulb gutters?</p>
+        <p>I can't wait for there to be technology for me to shun when I'm dying. My grandchildren will look at me and wonder how I survive unplugged, whilst they plug me in to the life support against my deranged wishes. Is that how the nanomites will get me? Via the hospital bed? The nanthropocene arriving just as the bulb gutters?</p>
     </div>
     <div class="leave">
         <p>
