--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/flyingduck.jpg" alt="duck flying across a Milford lake" id="duckpic"><p>unidentified flying duckjet</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/mothwall.jpg" alt="marble mothwall" id="mothwallpic"><p>mothwall</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/mothwall.jpg" alt="marble mothwall on the Milford track" id="mothwallpic"><p>mothwall</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/waterfall.jpg" alt="waterfall on the Milford track" id="waterfallpic"><p>the centrefold</p></div>
 
@@ -228,6 +228,14 @@
         <div class="imgcontainerportrait"><img src="./resources/images/idlewild.jpg" alt="wildflower in the rockies" id="idlewildpic"><p>idlewild</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/bumblecram.jpg" alt="bumble bees on a flower crammed with purple" id="bumblecrampic"><p>bumblecram</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/wetleaf.jpg" alt="Berkeley the dog standing next to a wet shimmering pavement leaf" id="wetleafpic"><p>wet leaf and the hound</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/aggie.jpg" alt="Soccer Mommy at the Aggie Theatre" id="aggiepic"><p>the aggie blues</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/bays.jpg" alt="Macandrew Bay" id="bayspic"><p>endless bays</p></div>
+
+        
     </div>
 
 </body>
