--- a/entries/projects/magicandmachine/66wiresconnected.html
+++ b/entries/projects/magicandmachine/66wiresconnected.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++64
+    <title>o++66
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>'maybe it was his inability to find a good photo of the scarf that inspired michael to write this game: it was the only way to show the scarf from all angles...</p>
-        <p>... this is what real human beings would do with games, if they had a way of making games that was actually accessible to them. it was a thought that opened my eyes, and they've never stopped opening, wider each day.'</p>
-        <p>&nbsp&nbsp&nbsp&nbsp&nbsp- Anna Anthropy, playing 'Scarfmemory' by Michael Brough</p>
+        <p>If wires connected everything we wouldn't be able to move. If every message made noise we wouldn't be able to move. Our houses would be deafening blocks of wire. It's the invisibility of tech that allows it to permeate everything.</p>
     </div>
     <div class="leave">
         <p>
