Add bank and shoal plus two images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
+            <br><a href="./entries/bankandshoal130823.html">bankandshoal130823</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/bubblecars200723.html">bubblecars200723</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
@@ -234,6 +235,10 @@
         <div class="imgcontainerportrait"><img src="./resources/images/aggie.jpg" alt="Soccer Mommy at the Aggie Theatre" id="aggiepic"><p>the aggie blues</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/bays.jpg" alt="Macandrew Bay" id="bayspic"><p>endless bays</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/frog.jpg" alt="a bright-skinned frog that survived the lawnmower" id="frogpic"><p>escaped the mowing blade</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/beetle.jpg" alt="a bright-skinned beetle that survived the hose" id="frogpic"><p>escaped the dousing hose</p></div>
 
         
     </div>
