--- a/entries/projects/magicandmachine/49imperfectlight.html
+++ b/entries/projects/magicandmachine/49imperfectlight.html
@@ -12,7 +12,11 @@
 
 <body>
     <div class="maintextsection">
-        <p>The imperfect, inconstant light of whatever was supposed to be casting light down there didn't really matter, because we were having to see it all in our minds. But the maps we were using, computer generated for ease, were brightly lit, and though these square charts were supposed to be frames for the imaginary world to hang on, jetties from which we could dive off, they in fact bled into the world like actual scaffolding, a rigid substance spoiling the look of the original dream, something that could no longer flex or morph. We were better off without the maps. Much better never to pin anything down. </p>
+        <p>The imperfect, inconstant light of whatever was supposed to be casting light down there didn't really matter, because we were having to see it all in our minds.</p> 
+        
+        <p>But the maps we were using, computer generated for ease, were brightly lit, and though these square charts were supposed to be frames for the imaginary world to hang on, jetties from which we could dive off, they in fact bled into the world like real scaffolding, a rigid substance spoiling the look of the original dream, something that could no longer flex or morph.</p> 
+        
+        <p>We were better off without the maps. Much better never to pin anything down. </p>
     </div>
     <div class="leave">
         <p>
