--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bankandshoal130823.html">bankandshoal130823</a>
+            <br><a href="./entries/beachscreenrift140823.html">beachscreenrift140823</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/bubblecars200723.html">bubblecars200723</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
