Add five entries to o++

--- a/entries/projects/magicandmachine/79gamingtwin.html
+++ b/entries/projects/magicandmachine/79gamingtwin.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++68
+    <title>o++79
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>like a child's hand being removed suddenly from the surface of a hot stove in the middle of a tantrum - we stepped off the £$%@?!?</p>
+        <p>gaming's evil twin<br>
+           a game that plays people<br>
+           the reflection of a game in the mirror<br>
+           a game without instructions<br>
+           a game with nothing but instructions<br>
+           a game that's upside down<br>
+           a game that's inside out</p>
     </div>
     <div class="leave">
         <p>
