--- a/entries/projects/magicandmachine/75fightingourselves.html
+++ b/entries/projects/magicandmachine/75fightingourselves.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++68
+    <title>o++75
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>like a child's hand being removed suddenly from the surface of a hot stove in the middle of a tantrum - we stepped off the £$%@?!?</p>
+        <p>The most compelling parts of the campaign had us fighting monsters that resembled our own characters. We cared most about the demons that looked like us. When they appeared, we let out near-genuine gasps across our video feeds. If we encountered ourselves at the dark end of some drawn out dungeon, we got excited. People would shout. People would wake up.</p>
     </div>
     <div class="leave">
         <p>
