--- a/entries/projects/magicandmachine/76silicon.html
+++ b/entries/projects/magicandmachine/76silicon.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++68
+    <title>o++76
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>like a child's hand being removed suddenly from the surface of a hot stove in the middle of a tantrum - we stepped off the £$%@?!?</p>
+        <p>rows and rows of clever clever silicon. cavernous intelligence. underground or under the sea or anywhere.</p>
     </div>
     <div class="leave">
         <p>
