--- a/entries/projects/magicandmachine/80machinesoutofhand.html
+++ b/entries/projects/magicandmachine/80machinesoutofhand.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++68
+    <title>o++80
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>like a child's hand being removed suddenly from the surface of a hot stove in the middle of a tantrum - we stepped off the £$%@?!?</p>
+        <p>Of course, there is always the possibility that we are just machines that got out of hand, or got left behind; religion as some form of ghost code, residual computer memory, or an attempt by our true maker to erase themselves with incense and myth.</p>
+        <p>Is that the common denominator of all technological leaps? A leap towards the invisible, the vanished, the insensible, that which can not be named or felt or remembered. </p>
     </div>
     <div class="leave">
         <p>
