--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
+            <br><a href="./entries/soberattention290823.html">soberattention290823</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/taylorsmistake020723.html">taylorsmistake020723</a>
@@ -197,7 +198,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/waterfall.jpg" alt="waterfall on the Milford track" id="waterfallpic"><p>the centrefold</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/frost.jpg" alt="receding frost on a football pitch" id="frostpic"><p>astrofrost decroaching</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/frost.jpg" alt="receding frost on a football pitch" id="frostpic"><p>a layer of astrofrost decroaching</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/ivy.jpg" alt="climbing ivy upon the church" id="ivypic"><p>crawl space</p></div>
 
