--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
+            <br><a href="./entries/onlinechess140923.html">onlinechess140923</a>
             <br><a href="./entries/plasma240623.html">plasma240623</a>
             <br><a href="./entries/pocked170123.html">pocked170123</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
@@ -53,7 +54,8 @@
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
-            <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a>
+            <br><a href="./entries/waitingnotingpoems180923.html">waitingnotingtime180923</a>
+            <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
             <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
