edit ancestors dimension

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>holy yellow passage for the medici</p></div>
 
-        <div class="imgcontainersmallsquare"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>clockloom</p></div>
 
