Add images, add the arcade, edit captions

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
         <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using Twine</span></p>
         <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - evolving systems of play, our imagination, and the working of digital worlds</span></p>
+        <p><span id="thearcadetitle"><a href="./entries/projects/thearcade.html">the arcade</a></span><span id="thearcadeinfo"> - a poem that grows with the pictures below</span></p>
     
     <div class="navigationtitle">
         optic verve
@@ -110,7 +111,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dappled mutt</p></div>
 
-        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail people were covered in mud, burning up, trying to complete a marathon</p></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail people were covered in mud, burning up, trying to run a marathon</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
 
@@ -120,7 +121,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>beachwater bomba and ink curtain shore</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>ink curtain beachwater</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
@@ -130,11 +131,11 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the ponds were filled with earth and empty bottles</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty bottles</p></div>
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadows of stadiums</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening in the shadows of stadiums</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
 
@@ -170,7 +171,7 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/barkinpark.jpg" alt="bark for park's sake" id="barkinparkpic"><p>bark for park's sake</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and cove upon cove</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer, and cove upon cove</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>trunk and untroubled water</p></div>
 
@@ -243,6 +244,14 @@
         <div class="imgcontainerportrait"><img src="./resources/images/frog.jpg" alt="a bright-skinned frog that survived the lawnmower" id="frogpic"><p>escaped the mowing blade</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/beetle.jpg" alt="a bright-skinned beetle that survived the hose" id="frogpic"><p>escaped the dousing hose</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/autumngym.jpg" alt="a truck beneath an autumnal tree outside our local gym" id="autumngympic"><p>autumn gym</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/howfallclimbs.jpg" alt="an autumn path with climbing orange trees" id="howfallclimbspic"><p>how fall climbs</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/howcolourswork.jpg" alt="autumn leaves against a blue sky" id="howcoloursworkpic"><p>how colours work</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/horsebones.jpg" alt="a rock formation looking like the bones of a horse" id="horsebonespic"><p>horse bones</p></div>
 
         
     </div>
