--- a/entries/projects/cartographer.html
+++ b/entries/projects/cartographer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../resources/css/mapmakers.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>calling all mapmakers</title>
+    <title>cartographer</title>
 </head>
 <body>
 
